src/objects/SW_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_State__c</fullName>
        <defaultValue>&apos;State 12&apos;</defaultValue>
        <label>Bundle State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <label>Bundle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Arctic Fox Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Due_Date__c</fullName>
        <inlineHelpText>Please enter the due date for this Deployment. This date will drive the contract completion dates for any partners associated with this Bundle.</inlineHelpText>
        <label>Deployment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Apps__c</fullName>
        <description>Total number of Apps for this specific service type</description>
        <label>Total # of Apps</label>
        <summaryForeignKey>SW_Bundle_Application__c.Service_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>SW Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Tabl_Bundles</fullName>
        <columns>NAME</columns>
        <columns>Bundle_Type__c</columns>
        <columns>of_Apps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>tablet</value>
        </filters>
        <label>Tablet Bundles</label>
    </listViews>
    <nameField>
        <label>SW Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SW Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>